--- a/frontend-ang/src/app/admin-template/admin-template.component.html
+++ b/frontend-ang/src/app/admin-template/admin-template.component.html
@@ -1,37 +1,42 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button>
+  <button mat-icon-button (click)="myDrawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
   <span style="flex: auto"></span>
-  <button mat-button >Home</button>
-  <button mat-button >Profile</button>
-  <button mat-button [matMenuTriggerFor]="importMenu">
+  <button mat-button routerLink="/admin/home">Home</button>
+  <button mat-button routerLink="/admin/profile" >Profile</button>
+  <button *ngIf="authService.roles.includes('ADMIN')" mat-button [matMenuTriggerFor]="importMenu">
     <mat-icon iconPositionEnd>keyboard_arrow_down</mat-icon>
     Import
   </button>
   <mat-menu #importMenu>
-    <button mat-menu-item >Load Students</button>
-    <button mat-menu-item >Load Payments</button>
+    <button mat-menu-item routerLink="/admin/loadStudents">Load Students</button>
+    <button mat-menu-item routerLink="/admin/loadPayments" >Load Payments</button>
   </mat-menu>
-  <button mat-raised-button color="accent" >Logout</button>
+  <button mat-button *ngIf="authService.isAuthenticated">
+    {{authService.username}}
+  </button>
+  <button mat-raised-button color="accent" (click)="logout()">
+    Logout
+  </button>
 </mat-toolbar>
 <mat-drawer-container>
-  <mat-drawer opened="true" mode="side" position="start">
+  <mat-drawer #myDrawer opened="true" mode="side" position="start">
     <mat-list>
       <mat-list-item>
-        <button mat-button >
+        <button mat-button routerLink="/admin/dashboard">
           <mat-icon>dashboard</mat-icon>
           Dashboard
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button >
+        <button mat-button routerLink="/admin/students">
           <mat-icon>dashboard</mat-icon>
           Students
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button>
+        <button mat-button routerLink="/admin/payments">
           <mat-icon>dashboard</mat-icon>
           Payments
         </button>
