--- a/frontend-ang/src/app/home/home.component.html
+++ b/frontend-ang/src/app/home/home.component.html
@@ -5,8 +5,9 @@
         Home
       </mat-card-title>
     </mat-card-header>
-    <mat-card-title>
+    <mat-divider></mat-divider>
+    <mat-card-content>
       Home
-    </mat-card-title>
+    </mat-card-content>
   </mat-card>
 </div>
