--- a/frontend-ang/src/app/students/students.component.html
+++ b/frontend-ang/src/app/students/students.component.html
@@ -1,1 +1,14 @@
-<p>students works!</p>
+<div class="container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Students
+      </mat-card-title>
+    </mat-card-header>
+    <mat-divider></mat-divider>
+    <mat-card-content>
+      Students
+    </mat-card-content>
+  </mat-card>
+</div>
+
